# homework13

./: .gitignore  CMakeLists.txt  FashionMNISTParser.h  README.md  TFClassifier.h  fashion_mnist.cpp  test_fashion_mnist_gtest.cpp
.github/workflows/: release.yml
